--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react-dom": "16.8.6",
     "react-loader-spinner": "^4.0.0",
     "react-promise-tracker": "^2.1.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
