--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-latex-next": "^2.1.0",
     "react-loader-spinner": "^4.0.0",
     "react-promise-tracker": "^2.1.0",
     "react-redux": "^7.2.5",
